@@ -76,7 +76,7 @@ public class TimePeriodValue implements Cloneable, Serializable {
      * @throws IllegalArgumentException if {@code period} is {@code null}.
      */
     public TimePeriodValue(TimePeriod period, double value) {
-        this(period, new Double(value));
+        this(period, Double.valueOf(value));
     }
 
     /**
